fixed modals on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -679,6 +679,9 @@ hr {
         width: 50%;
         padding: 10px;
     }
+    .tag {
+        font-size: 12px;
+    }
 }
 
 @media only screen and (min-width: 1680px) {
@@ -757,7 +760,7 @@ hr {
     }
 
     .modal-video {
-        height: 40%;
+        height: auto;
     }
 
     .description {
